+ Fixed contrast issue in section__subtitle

--- a/css/components/style.css
+++ b/css/components/style.css
@@ -186,6 +186,7 @@ h4 {
     padding: .25em 1em;
     font-family: var(--ff-secondary);
     margin-bottom: 1em;
+    color: var(--clr-light);
 }
 
 
